fix: removed overflow hidden from .skye-section - only being used on single-review.php

--- a/assets/css/modules/_layouts.scss
+++ b/assets/css/modules/_layouts.scss
@@ -42,7 +42,6 @@
 
 .skye-section {
 	max-width: 100%;
-	overflow: hidden;
 	display: flex;
 	flex-direction: column-reverse;
 	gap: 1rem;
